fix text align quote error and ver bump

--- a/scss/7.utilities/_utilities.text-align.scss
+++ b/scss/7.utilities/_utilities.text-align.scss
@@ -1,6 +1,6 @@
 // SETTINGS
 
-$text-align-prop-values: 'left', 'center', 'right', 'justify' !default;
+$text-align-prop-values: left, center, right, justify !default;
 
 // MIXINS
 
